<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_practise_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jlo19.guitartutor.activities.PractiseSetupActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:text="@string/practise_setup_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtInformation"
        android:layout_below="@+id/toolbar"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:textSize="45sp"
        android:textStyle="italic"
        android:layout_margin="10dp" />

    <TextView
    android:text="@string/practise_chord_selection_instruction"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/txtChordSelectionInstruction"
    android:layout_below="@+id/txtInformation"
    android:textColor="@color/colorText"
    android:textAlignment="center"
    android:textSize="42sp"
    android:layout_margin="10dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnChord1"
        android:spinnerMode="dialog"
        android:layout_below="@+id/txtChordSelectionInstruction"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnChord2"
        android:spinnerMode="dialog"
        android:layout_below="@+id/spnChord1"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnChord3"
        android:spinnerMode="dialog"
        android:layout_below="@+id/spnChord2"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnChord4"
        android:spinnerMode="dialog"
        android:layout_below="@+id/spnChord3"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp" />

    <TextView
        android:text="@string/practise_chord_change_selection_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtChordChangeInstruction"
        android:layout_below="@+id/spnChord4"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:textSize="42sp"
        android:layout_margin="10dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtChordChangeInstruction"
        android:layout_marginBottom="50dp"
        android:id="@+id/rGroupChordChange"
        android:orientation="horizontal">

        <RadioButton
            android:text="@string/practise_one_beat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtnOneBeat"
            android:layout_weight="1"
            android:textSize="24sp"
            android:checked="true" />

        <RadioButton
            android:text="@string/practise_two_beats_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtnTwoBeats"
            android:layout_weight="1"
            android:textSize="24sp" />

        <RadioButton
            android:text="@string/practise_four_beats_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtnFourBeats"
            android:layout_weight="1"
            android:textSize="24sp" />

        <RadioButton
            android:text="@string/practise_eight_beats_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtnEightBeats"
            android:layout_weight="1"
            android:textSize="24sp" />

        <RadioButton
            android:text="@string/practise_sixteen_beats_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtnSixteenBeats"
            android:layout_weight="1"
            android:textSize="24sp" />

    </RadioGroup>

    <Button
        android:text="@string/practise_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rGroupChordChange"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnPractise"
        android:height="150dp"
        android:width="320dp"
        android:textSize="43sp"
        android:drawableStart="@drawable/quaver_music_icon"
        android:layout_marginTop="10dp" />

</RelativeLayout>
