<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jlo19.guitartutor.activities.LoginActivity">

    <View
        android:id="@+id/viewCenter"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="0dp" />

    <TextView
        android:text="@string/register_here_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtRegister"
        android:textSize="@dimen/practise_setup_big_text"
        android:textStyle="normal|bold|italic"
        android:clickable="true"
        android:layout_below="@+id/txtAccountQ"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent" />

    <TextView
        android:text="@string/no_account_question_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/practise_setup_big_text"
        android:id="@+id/txtAccountQ"
        android:textStyle="normal|italic"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/small_layout_margin"
        android:layout_below="@+id/viewCenter"
        android:textColor="@color/colorText" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtInputPassword"
        android:id="@+id/txtInputEmail"
        android:layout_marginBottom="@dimen/big_layout_margin"
        android:layout_marginEnd="@dimen/big_layout_margin"
        android:layout_marginStart="@dimen/big_layout_margin"
        app:hintTextAppearance="@style/AppTheme.TextInput">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/editTxtEmail"
            android:hint="@string/email_name"
            android:textColor="@color/colorText"
            android:textSize="@dimen/practise_setup_big_text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtInputPassword"
        android:layout_marginBottom="@dimen/big_layout_margin"
        android:layout_marginEnd="@dimen/big_layout_margin"
        android:layout_marginStart="@dimen/big_layout_margin"
        app:hintTextAppearance="@style/AppTheme.TextInput"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/viewCenter">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/editTxtPassword"
            android:hint="@string/password_name"
            android:textColor="@color/colorText"
            android:textSize="@dimen/practise_setup_big_text" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLayout"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/btnLogin"
            android:height="@dimen/main_buttons_height"
            android:width="@dimen/main_buttons_width"
            android:textSize="43sp"
            android:layout_marginTop="@dimen/big_layout_margin"
            android:textAlignment="center"
            android:background="@drawable/log_in_button"
            android:layout_width="@dimen/main_buttons_width"
            android:layout_height="@dimen/main_buttons_height" />
    </RelativeLayout>

</RelativeLayout>
