<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jlo19.guitartutor.activities.EditAccountActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:id="@+id/txtInputName"
        android:layout_margin="@dimen/big_layout_margin"
        app:hintTextAppearance="@style/AppTheme.TextInput">

        <EditText
            android:id="@+id/editTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name_name"
            android:textColor="@color/colorText"
            android:textSize="@dimen/practise_setup_big_text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInputName"
        android:id="@+id/txtInputEmail"
        android:layout_marginBottom="@dimen/big_layout_margin"
        android:layout_marginEnd="@dimen/big_layout_margin"
        android:layout_marginStart="@dimen/big_layout_margin"
        app:hintTextAppearance="@style/AppTheme.TextInput">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/editTxtEmail"
            android:hint="@string/email_name"
            android:textColor="@color/colorText"
            android:textSize="@dimen/practise_setup_big_text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInputEmail"
        android:id="@+id/txtInputConfirmEmail"
        android:layout_marginBottom="@dimen/big_layout_margin"
        android:layout_marginEnd="@dimen/big_layout_margin"
        android:layout_marginStart="@dimen/big_layout_margin"
        app:hintTextAppearance="@style/AppTheme.TextInput">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/editTxtConfirmEmail"
            android:hint="@string/confirm_email_name"
            android:textColor="@color/colorText"
            android:textSize="@dimen/practise_setup_big_text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInputConfirmEmail"
        android:id="@+id/txtInputPassword"
        android:layout_marginBottom="@dimen/big_layout_margin"
        android:layout_marginEnd="@dimen/big_layout_margin"
        android:layout_marginStart="@dimen/big_layout_margin"
        app:hintTextAppearance="@style/AppTheme.TextInput">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/editTxtPassword"
            android:hint="@string/password_name"
            android:textColor="@color/colorText"
            android:textSize="@dimen/practise_setup_big_text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInputPassword"
        android:layout_marginBottom="@dimen/big_layout_margin"
        android:layout_marginEnd="@dimen/big_layout_margin"
        android:layout_marginStart="@dimen/big_layout_margin"
        app:hintTextAppearance="@style/AppTheme.TextInput">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/editTxtConfirmPassword"
            android:hint="@string/confirm_password_name"
            android:textColor="@color/colorText"
            android:textSize="@dimen/practise_setup_big_text" />

    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLayout"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/btnSave"
            android:height="@dimen/main_buttons_height"
            android:width="@dimen/main_buttons_width"
            android:textSize="43sp"
            android:layout_marginTop="@dimen/big_layout_margin"
            android:textAlignment="center"
            android:background="@drawable/save_changes_button"
            android:layout_width="@dimen/main_buttons_width"
            android:layout_height="@dimen/main_buttons_height" />
    </RelativeLayout>

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

</RelativeLayout>
