<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jlo19.guitartutor.activities.AccountActivity">

    <TextView
        android:text="@string/name_name"
        android:layout_below="@+id/toolbar"
        android:layout_toStartOf="@+id/viewCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/account_text_size"
        android:textColor="@color/colorText"
        android:layout_margin="@dimen/big_layout_margin"
        android:textStyle="bold"
        android:id="@+id/txtNameTitle" />

    <me.grantland.widget.AutofitTextView
        android:layout_below="@+id/toolbar"
        android:layout_toEndOf="@+id/viewCenter"
        android:layout_alignTop="@+id/txtNameTitle"
        android:layout_alignBottom="@+id/txtNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="@dimen/account_text_size"
        android:textColor="@color/colorText"
        android:id="@+id/txtName"
        android:gravity="center_vertical"
        android:layout_marginEnd="@dimen/big_layout_margin" />

    <TextView
        android:text="@string/email_name"
        android:layout_below="@+id/txtNameTitle"
        android:layout_toStartOf="@+id/viewCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/account_text_size"
        android:textColor="@color/colorText"
        android:layout_margin="@dimen/big_layout_margin"
        android:textStyle="bold"
        android:id="@+id/txtEmailTitle" />

    <me.grantland.widget.AutofitTextView
        android:layout_below="@+id/txtNameTitle"
        android:layout_toEndOf="@+id/viewCenter"
        android:layout_alignTop="@+id/txtEmailTitle"
        android:layout_alignBottom="@+id/txtEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/account_text_size"
        android:textColor="@color/colorText"
        android:maxLines="1"
        android:id="@+id/txtEmail"
        android:gravity="center_vertical"
        android:layout_marginEnd="@dimen/big_layout_margin"/>

    <TextView
        android:text="@string/level_name"
        android:layout_below="@+id/txtEmailTitle"
        android:layout_toStartOf="@+id/viewCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/account_text_size"
        android:textColor="@color/colorText"
        android:layout_margin="@dimen/big_layout_margin"
        android:textStyle="bold"
        android:id="@+id/txtLevelTitle" />

    <me.grantland.widget.AutofitTextView
        android:layout_below="@+id/txtEmailTitle"
        android:layout_toEndOf="@+id/viewCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/account_text_size"
        android:textColor="@color/colorText"
        android:layout_alignTop="@+id/txtLevelTitle"
        android:layout_alignBottom="@+id/txtLevelTitle"
        android:maxLines="1"
        android:id="@+id/txtLevel"
        android:gravity="center_vertical"
        android:layout_marginEnd="@dimen/big_layout_margin"/>

    <TextView
        android:text="@string/achievements_name"
        android:layout_below="@+id/txtLevelTitle"
        android:layout_toStartOf="@+id/viewCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/account_text_size"
        android:textColor="@color/colorText"
        android:layout_margin="@dimen/big_layout_margin"
        android:textStyle="bold"
        android:id="@+id/txtAchievementsTitle" />

    <me.grantland.widget.AutofitTextView
        android:layout_below="@+id/txtLevelTitle"
        android:layout_toEndOf="@+id/viewCenter"
        android:layout_alignTop="@+id/txtAchievementsTitle"
        android:layout_alignBottom="@+id/txtAchievementsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/account_text_size"
        android:textColor="@color/colorText"
        android:maxLines="1"
        android:id="@+id/txtAchievements"
        android:gravity="center_vertical"
        android:layout_marginEnd="@dimen/big_layout_margin"/>

    <View
        android:id="@+id/viewCenter"
        android:layout_height="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="20dp" />

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLayout"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btnLogOut"
            android:textSize="20sp"
            android:layout_toEndOf="@+id/btnViewCenter"
            android:drawablePadding="2dp"
            android:background="@drawable/log_out_button"
            android:width="180dp"
            android:layout_height="@dimen/main_buttons_height"
            android:layout_width="@dimen/main_buttons_width" />

        <View
            android:id="@+id/btnViewCenter"
            android:layout_height="10dp"
            android:layout_centerHorizontal="true"
            android:layout_width="20dp" />

        <Button
            android:id="@+id/btnEditAccount"
            android:textSize="20sp"
            android:layout_alignBottom="@+id/btnLogOut"
            android:layout_toStartOf="@+id/btnViewCenter"
            android:drawablePadding="2dp"
            android:background="@drawable/edit_account_button"
            android:minHeight="52dp"
            android:layout_width="@dimen/main_buttons_width"
            android:layout_height="@dimen/main_buttons_height" />
    </RelativeLayout>

</RelativeLayout>
